# treasure-hunter

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  pyproject.toml  test_basic.py
.github/workflows/: build.yml  ci.yml
payloads/: README.md  cleanup.ps1  network-spray.dd  smash-grab.dd  stager.ps1  stealth-exfil.dd
research/: deep-dive.md  efficiency-and-architecture.md  tool-landscape.md
tests/: test_browser_grabber.py  test_cert_grabber.py  test_cli.py  test_clipboard_grabber.py  test_cloud_cred_grabber.py  test_credential_audit.py  test_crypto.py  test_crypto_wallet_grabber.py  test_db_client_grabber.py  test_delta.py  test_deploy_cred_grabber.py  test_dev_tools_grabber.py  test_dpapi_grabber.py  test_email_grabber.py  test_entropy.py  test_env_secrets_grabber.py  test_exfil.py  test_git_grabber.py  test_gpp_grabber.py  test_grabber_base.py  test_grabber_utils.py  test_hardened.py  test_hardened_grabbers.py  test_history_grabber.py  test_lateral.py  test_messaging_grabber.py  test_models.py  test_net_recon_grabber.py  test_network.py  test_notes_grabber.py  test_password_mgr_grabber.py  test_process_grabber.py  test_recon_grabber.py  test_registry_grabber.py  test_remote_access_grabber.py  test_report.py  test_reporter.py  test_scanner.py  test_schtask_grabber.py  test_session_grabber.py  (+4 more)
tests/integration/: README.md  seed_target.ps1  (+1 more)
treasure_hunter/: __init__.py  __main__.py  cli.py  console.py  credential_audit.py  crypto.py  delta.py  entropy.py  exfil.py  lateral.py  models.py  network.py  report.py  reporter.py  scanner.py  tui.py
(+36 files in other folders)
