[project]
name = "treasure-hunter"
version = "1.0.0"
description = "Red team file discovery and credential extraction tool — 16 grabber modules, 533 detection patterns, pure-Python crypto, zero external dependencies."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
treasure-hunter = "treasure_hunter.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["treasure_hunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
